trybuild-qcell/src/compiletest/lcell-03.stderr
error[E0521]: borrowed data escapes outside of closure
 --> src/compiletest/lcell-03.rs:9:30
  |
7 |     LCellOwner::scope(|mut owner1| {
  |                        ---------- `owner1` declared here, outside of the closure body
8 |         LCellOwner::scope(|mut owner2| {
  |                            ---------- `owner2` is a reference that is only valid in the closure body
9 |             let c1 = Rc::new(owner1.cell(100u32));
  |                              ^^^^^^^^^^^^^^^^^^^ `owner2` escapes the closure body here
  |
  = note: requirement occurs because of the type `LCellOwner<'_>`, which makes the generic argument `'_` invariant
  = note: the struct `LCellOwner<'id>` is invariant over the parameter `'id`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
 --> src/compiletest/lcell-03.rs:9:30
  |
7 |     LCellOwner::scope(|mut owner1| {
  |                        ----------
  |                        |
  |                        `owner1` is a reference that is only valid in the closure body
  |                        has type `LCellOwner<'1>`
8 |         LCellOwner::scope(|mut owner2| {
9 |             let c1 = Rc::new(owner1.cell(100u32));
  |                              ^^^^^^^^^^^^^^^^^^^
  |                              |
  |                              `owner1` escapes the closure body here
  |                              argument requires that `'1` must outlive `'static`
